[package]
name = "xmmap"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["LemonHX <lemonhx@lemonhx.tech>"]
repository = "https://github.com/lemonhx/xmmap"
documentation = "https://docs.rs/xmmap"
keywords = ["mmap", "memory-map", "io", "file"]


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3", features = ["memoryapi", "sysinfoapi", "fileapi", "handleapi", "processthreadsapi", "securitybaseapi", "winbase"] }
widestring = "1.0.1"

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"


[dependencies]
